[gd_scene load_steps=20 format=2]

[ext_resource path="res://Managing/Colliders/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=2]
[ext_resource path="res://Managing/Colliders/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Managing/Colliders/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Enemies/MiniDeathMachine/MDM.gd" type="Script" id=5]
[ext_resource path="res://Entities/Enemies/Assets/EnemyOutline.tres" type="Material" id=6]
[ext_resource path="res://Entities/Enemies/MiniDeathMachine/MDM.png" type="Texture" id=7]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarEmpty.png" type="Texture" id=8]
[ext_resource path="res://Entities/Enemies/Assets/HealthBarFull.png" type="Texture" id=9]
[ext_resource path="res://Managing/MoneyDropper.gd" type="Script" id=10]
[ext_resource path="res://Entities/DamageManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=12]
[ext_resource path="res://Entities/Enemies/MachineHurt.wav" type="AudioStream" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 112.004

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="CircleShape2D" id=5]
radius = 2.0

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ScaleHelper/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScaleHelper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ) ]
}

[node name="MDM" type="KinematicBody2D" groups=[
"MDM",
]]
collision_layer = 0
script = ExtResource( 5 )
speed = 1200.0
kbAmount = 32.0
accel = 24.0
friction = 12.0
wanderRange = 32

[node name="ScaleHelper" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="ScaleHelper"]
material = ExtResource( 6 )
texture = ExtResource( 7 )
hframes = 2

[node name="Collisions" type="Node2D" parent="."]

[node name="Hurtbox" parent="Collisions" instance=ExtResource( 1 )]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="Collisions/Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="Hitbox" parent="Collisions" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 3 )
collision_layer = 4
collision_mask = 2
damage = 1

[node name="CollisionShape2D" parent="Collisions/Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="Collisions" instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="Collisions/SoftCollision" index="0"]
shape = SubResource( 4 )

[node name="BounceRay" type="RayCast2D" parent="Collisions"]
visible = false
enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 5 )

[node name="MoneyDropper" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="DamageManager" parent="." instance=ExtResource( 11 )]
hurtSFXPath = NodePath("../HitSFX")

[node name="HitSFX" type="Node2D" parent="."]
script = ExtResource( 12 )
audio = ExtResource( 13 )
volumeMod = 5.0
bus = "SFX"

[node name="Timers" type="Node" parent="."]

[node name="WanderTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DefendTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="RetreatTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="Healthbar" type="TextureProgress" parent="."]
margin_left = -9.0
margin_top = -15.0
margin_right = 9.0
margin_bottom = -10.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 6 )

[connection signal="death" from="." to="MoneyDropper" method="drop_money"]
[connection signal="hurt" from="Collisions/Hurtbox" to="DamageManager" method="take_damage"]
[connection signal="hit_object" from="Collisions/Hitbox" to="." method="_on_hit_object"]
[connection signal="timeout" from="Timers/WanderTimer" to="." method="_on_wander_timer_timeout"]

[editable path="Collisions/Hurtbox"]
[editable path="Collisions/Hitbox"]
[editable path="Collisions/PlayerDetection"]
[editable path="Collisions/SoftCollision"]
